--- a/UdpNatPunchClient/Styles.xaml
+++ b/UdpNatPunchClient/Styles.xaml
@@ -42,6 +42,12 @@
         <Setter Property="FontSize" Value="16"/>
     </Style>
 
+    <Style TargetType="TextBlock" x:Key="FileInfoTextBlock" BasedOn="{StaticResource BaseTextBlock}">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="Margin" Value="2, 2, 2, 0"/>
+    </Style>
+
     <Style TargetType="TextBlock" x:Key="MessageDeliveryStateTextBlock" BasedOn="{StaticResource BaseTextBlock}">
         <Setter Property="HorizontalAlignment" Value="Right"/>
         <Setter Property="FontStyle" Value="Oblique"/>
