--- a/UdpNatPunchClient/Styles.xaml
+++ b/UdpNatPunchClient/Styles.xaml
@@ -44,8 +44,8 @@
 
     <Style TargetType="TextBlock" x:Key="FileInfoTextBlock" BasedOn="{StaticResource BaseTextBlock}">
         <Setter Property="FontSize" Value="16"/>
-        <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="Margin" Value="2, 2, 2, 0"/>
+        <Setter Property="FontWeight" Value="SemiBold"/>
+        <Setter Property="Margin" Value="10, 2, 2, 0"/>
     </Style>
 
     <Style TargetType="TextBlock" x:Key="MessageDeliveryStateTextBlock" BasedOn="{StaticResource BaseTextBlock}">
@@ -94,6 +94,11 @@
 
     <Style TargetType="Button" x:Key="BaseButton">
         <Setter Property="Margin" Value="2"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+    </Style>
+
+    <Style TargetType="Button" x:Key="DownloadFileFromMessageButton" BasedOn="{StaticResource BaseButton}">
+        <Setter Property="Margin" Value="10, 2, 2, 2"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
     </Style>
 
