--- a/UdpNatPunchClient/MainWindow.xaml
+++ b/UdpNatPunchClient/MainWindow.xaml
@@ -14,7 +14,7 @@
         mc:Ignorable="d"
         Title="{Binding TitleText}"
         Height="600"
-        Width="750"
+        Width="900"
         ShowInTaskbar="{Binding ShowInTaskbar}"
         WindowState="{Binding WindowState}">
     <Window.Resources>
@@ -414,16 +414,20 @@
                                             Margin="5"
                                             HorizontalAlignment="{Binding Direction, Converter={StaticResource MessageDirectionAlignmentConverter}}"
                                             Background="{Binding Direction, Converter={StaticResource MessageDirectionColorConverter}}">
-                                            <TextBlock
-                                                Style="{StaticResource FileInfoTextBlock}"
-                                                Background="{Binding Direction, Converter={StaticResource MessageDirectionColorConverter}}"
-                                                Text="{Binding AvailableFile.Name}"/>
+                                            <Border
+                                                Width="350">
+                                                <TextBlock
+                                                    Style="{StaticResource FileInfoTextBlock}"
+                                                    Background="{Binding Direction, Converter={StaticResource MessageDirectionColorConverter}}"
+                                                    Text="{Binding AvailableFile.Name}"/>
+                                            </Border>
                                             <TextBlock
                                                 Style="{StaticResource FileInfoTextBlock}"
                                                 Background="{Binding Direction, Converter={StaticResource MessageDirectionColorConverter}}"
                                                 Text="{Binding AvailableFile.Size, Converter={StaticResource BytesToMegabytesConverter}}"/>
-                                            <Button 
+                                            <Button
                                                 Style="{StaticResource DownloadFileFromMessageButton}"
+                                                IsEnabled="{Binding AvailableFile.IsAvailable}"
                                                 Command="{Binding DataContext.DownloadFileCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}}"
                                                 CommandParameter="{Binding AvailableFile}">
                                                 <TextBlock
