--- a/UdpNatPunchClient/Styles.xaml
+++ b/UdpNatPunchClient/Styles.xaml
@@ -222,23 +222,35 @@
         <Setter Property="Visibility" Value="Collapsed"/>
         <Setter Property="IsEnabled" Value="True"/>
         <Style.Triggers>
-            <DataTrigger Binding="{Binding RelativeSource={RelativeSource 
-                    Mode=FindAncestor, 
-                    AncestorType={x:Type ListBoxItem}},
-                    Path=IsSelected}" 
-                    Value="True">
-                <Setter Property="Visibility" Value="Visible"/>
-            </DataTrigger>
+            <MultiDataTrigger>
+                <MultiDataTrigger.Conditions>
+                    <Condition Binding="{Binding IsActive}" Value="True"/>
+                    <Condition Binding="{Binding RelativeSource={RelativeSource 
+                        Mode=FindAncestor, 
+                        AncestorType={x:Type ListBoxItem}},
+                        Path=IsSelected}" 
+                        Value="True"/>
+                </MultiDataTrigger.Conditions>
+                <MultiDataTrigger.Setters>
+                    <Setter Property="Visibility" Value="Visible"/>
+                    <Setter Property="IsEnabled" Value="True"/>
+                </MultiDataTrigger.Setters>
+            </MultiDataTrigger>
 
-            <DataTrigger Binding="{Binding IsDownloaded}" Value="True">
-                <Setter Property="Visibility" Value="Collapsed"/>
-                <Setter Property="IsEnabled" Value="False"/>
-            </DataTrigger>
-
-            <DataTrigger Binding="{Binding IsCancelled}" Value="True">
-                <Setter Property="Visibility" Value="Collapsed"/>
-                <Setter Property="IsEnabled" Value="False"/>
-            </DataTrigger>
+            <MultiDataTrigger>
+                <MultiDataTrigger.Conditions>
+                    <Condition Binding="{Binding IsActive}" Value="False"/>
+                    <Condition Binding="{Binding RelativeSource={RelativeSource 
+                        Mode=FindAncestor, 
+                        AncestorType={x:Type ListBoxItem}},
+                        Path=IsSelected}" 
+                        Value="True"/>
+                </MultiDataTrigger.Conditions>
+                <MultiDataTrigger.Setters>
+                    <Setter Property="Visibility" Value="Collapsed"/>
+                    <Setter Property="IsEnabled" Value="False"/>
+                </MultiDataTrigger.Setters>
+            </MultiDataTrigger>
         </Style.Triggers>
     </Style>
 
